fix: sélection dans collapse des évvenment, affichage du message de confirmation d envoi du formulaire

--- a/src/components/Select/style.scss
+++ b/src/components/Select/style.scss
@@ -28,6 +28,7 @@
   display: flex;
   position: absolute;
   z-index: 1;
+  cursor: pointer;
   ul {
     position: relative;
     list-style: none;
@@ -41,6 +42,10 @@
       min-height: 32px;
       margin: 0;
       text-transform: capitalize;
+      cursor: pointer;
+      &:hover {
+        background: rgba(91, 50, 255, 0.1);
+      }
     }
   }
   input {
